<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".CreateAccountActivity">

        <ImageView
            android:id="@+id/createaccount_bg"
            android:layout_width="643dp"
            android:layout_height="713dp"
            android:layout_marginStart="-90dp"
            android:layout_marginTop="83dp"
            android:contentDescription="@string/background_svg"
            android:src="@drawable/ic_createaccount_bg"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:contentDescription="@string/back_icon"
            android:id="@+id/createaccount_back_icon"
            style="@style/back_icon"
            android:src="@drawable/ic_back"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/createaccount_h1"
            style="@style/welcomback_h1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginTop="25dp"
            android:text="@string/create_naccount"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/createaccount_back_icon" />

        <EditText
            android:id="@+id/createaccount_email"
            style="@style/edit_text"
            android:layout_marginTop="79dp"
            android:hint="@string/enter_email_id"
            android:inputType="textEmailAddress"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/createaccount_h1"
            android:autofillHints="Enter Email" />

        <EditText
            android:id="@+id/createaccount_username"
            style="@style/edit_text"
            android:layout_marginTop="44dp"
            android:hint="@string/create_username"
            android:inputType="text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/createaccount_email"
            android:autofillHints="Enter Username" />

        <EditText
            android:id="@+id/createaccount_password"
            style="@style/edit_text"
            android:layout_marginTop="44dp"
            android:hint="@string/create_password"
            android:inputType="textPassword"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/createaccount_username"
            android:autofillHints="Create Password" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/createaccount_signup"
            style="@style/getstarted_button"
            android:layout_width="229dp"
            android:layout_height="54dp"
            android:layout_marginTop="95dp"
            android:text="@string/sign_up"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/createaccount_password" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>